--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -3,7 +3,10 @@
 "./Partials/header",
 "./Partials/footer",
 "./Partials/main",
-"./Partials/about";
+"./Partials/about",
+"./Partials/gallery",
+"./Partials/contact";
+
 
 
 * {
