--- a/Styles/Partials/_colors.scss
+++ b/Styles/Partials/_colors.scss
@@ -1,7 +1,9 @@
 $colorPrimario: #2e2e2e;
+$colorPrimarioTransparent: #2e2e2e85;
 $colorSecundario: #151515;
 $colorTerceario: #545454;
 $colorCuaternario: #bbbbbb;
+
 $colorFuentePrimario: #eeeeee;
 $colorFuenteSecundario: #b4b4b4;
 $colorFuenteTerceario: #383838
