--- a/Styles/Partials/_extends.scss
+++ b/Styles/Partials/_extends.scss
@@ -1,5 +1,6 @@
 %parallax {
-    background-image: url(../../Multimedia/Main/mainS.jpg);
+    background-image: url("../Multimedia/main/mainS.jpg");
+
     height: 16rem;
     background-attachment: fixed;
     background-position: top;
