--- a/Styles/Partials/_gallery.scss
+++ b/Styles/Partials/_gallery.scss
@@ -2,31 +2,29 @@
 #galleryMain {
     color: $colorFuentePrimario;
     background-color: $colorPrimario;
+    margin-top: 4rem;
+    padding: 1rem;
 
-    .sectorGaleria {
-        margin-top: 4rem;
-        padding: 1rem;
-
-        .sectorGaleriaTexto {
-            .sectorGaleriaTextoLink {
-                text-decoration: none;
-                color: $colorFuentePrimario;
-                font-size: 24px;
-                @extend %fuenteTitulo;
-            }
-
-            .sectorGaleriaTextoParrafo {
-                text-indent: 2rem;
-                margin-top: 2rem;
-                text-align: justify;
-            }
+    .sectorGaleriaTexto {
+        .sectorGaleriaTextoLink {
+            text-decoration: none;
+            color: $colorFuentePrimario;
+            font-size: 24px;
+            @extend %fuenteTitulo;
         }
 
-        .sectorGaleriaImagenLink {
-            width: 100%;
+        .sectorGaleriaTextoParrafo {
+            text-indent: 2rem;
+            margin-top: 2rem;
+            text-align: justify;
         }
     }
+
+    .sectorGaleriaImagenLink {
+        width: 100%;
+    }
 }
+
 
 #galleryClasesMain,
 #galleryCompeticionMain {
@@ -55,34 +53,82 @@
             padding-top: 10px;
             padding-bottom: 10px;
         }
-
     }
 
     .galeriaContenedor {
         background-size: 100%;
         margin-top: 4rem;
         padding-top: 10rem;
-
     }
 
     .sectorClasesGaleriaUno {
-        background-image: url("../../Multimedia/Gallery/Galería1/main.jpg");
+        background-image: url("../Multimedia/Gallery/Galería1/main.jpg");
         margin-top: 8rem;
     }
 
     .sectorClasesGaleriaDos {
-        background-image: url("../../Multimedia/Gallery/Galería2/main.jpg");
+        background-image: url("../Multimedia/Gallery/Galería2/main.jpg");
     }
 
     .sectorCompeticionGaleriaUno {
-        background-image: url("../../Multimedia/Gallery/Galería3/2.jpg");
+        background-image: url("../Multimedia/Gallery/Galería3/2.jpg");
     }
 
     .sectorCompeticionGaleriaDos {
-        background-image: url("../../Multimedia/Gallery/Galería4/1.jpg");
+        background-image: url("../Multimedia/Gallery/Galería4/1.jpg");
     }
 
     .sectorCompeticionGaleriaTres {
-        background-image: url("../../Multimedia/Gallery/Galería5/main.jpg");
+        background-image: url("../Multimedia/Gallery/Galería5/main.jpg");
+    }
+}
+
+//END MOBILE FIRST
+
+
+//SMALL TABLET BREAKPOINT 
+@media (min-width: 576px) {
+    #galleryMain {
+        margin-top: 8rem;
+        padding: 1rem;
+        font-size: 1rem;
+    }
+
+    #galleryClasesMain,
+    #galleryCompeticionMain {
+        margin-top: 10rem;
+        background-color: $colorPrimario;
+    }
+}
+
+//END SMALL TABLET BREAKPOINT 
+
+
+
+//SMALL DESKTOP BREAKPOINT 
+@media (min-width: 1200px) {
+
+    #galleryMain {
+        margin-top: 12rem;
+        padding: 1rem;
+        font-size: 1rem;
+
+        .sectorGaleriaTextoParrafo {
+            font-size: 24px;
+        }
+    }
+
+    #galleryClasesMain,
+    #galleryCompeticionMain {
+        margin-top: 10rem;
+        background-color: $colorPrimario;
+
+        .galeriaContenedor {
+            background-size: 100%;
+            padding-top: 18rem;
+            margin-right: 22rem;
+            margin-left: 22rem;
+            border-radius: 10px;
+        }
     }
 }
