se corrigio galeria y foto de main x3

--- a/Styles/Partials/_extends.scss
+++ b/Styles/Partials/_extends.scss
@@ -1,5 +1,5 @@
 %parallax {
-    background-image: url("../Multimedia/main/mainS.jpg");
+    background-image: url("../Multimedia/Main/mainS.jpg");
 
     height: 16rem;
     background-attachment: fixed;
