--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 .mainBody .mainImage {
-  background-image: url("../Multimedia/main/mainS.jpg");
+  background-image: url("../Multimedia/Main/mainS.jpg");
   height: 16rem;
   background-attachment: fixed;
   background-position: top;
