--- a/Styles/Partials/_about.scss
+++ b/Styles/Partials/_about.scss
@@ -132,9 +132,11 @@
     }
 
     .videoYT {
+        width: 100%;
         margin-top: 2rem;
         margin-left: auto;
         margin-right: auto;
+        padding: 1rem;
     }
 
     .contenedorLogros {
