--- a/Styles/Partials/_about.scss
+++ b/Styles/Partials/_about.scss
@@ -132,7 +132,7 @@
     }
 
     .videoYT {
-        height: 100%;
+        height: auto;
         width: 100%;
         margin-top: 2rem;
         margin-left: auto;
