--- a/Styles/style.css
+++ b/Styles/style.css
@@ -476,7 +476,7 @@ footer #footerRedes .footerBotonRedes .footerBotonRedesImg {
   color: #eeeeee;
 }
 #acercaMain .videoYT {
-  height: 100%;
+  height: auto;
   width: 100%;
   margin-top: 2rem;
   margin-left: auto;
