se corrige el video de YT

--- a/Styles/Partials/_about.scss
+++ b/Styles/Partials/_about.scss
@@ -132,8 +132,8 @@
     }
 
     .videoYT {
-        height: auto;
         width: 100%;
+        height: fit-content;
         margin-top: 2rem;
         margin-left: auto;
         margin-right: auto;
