--- a/Styles/Partials/_about.scss
+++ b/Styles/Partials/_about.scss
@@ -133,7 +133,7 @@
 
     .videoYT {
         width: 100%;
-        height: fit-content;
+        height: 177%;
         margin-top: 2rem;
         margin-left: auto;
         margin-right: auto;
