--- a/Styles/Partials/_about.scss
+++ b/Styles/Partials/_about.scss
@@ -131,11 +131,19 @@
         }
     }
 
-    .videoYT {
-        margin-top: 2rem;
+    .contenedorVideo {
         margin-left: auto;
         margin-right: auto;
-        padding: 1rem;
+        text-align: center;
+
+        .videoYT {
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 2rem;
+            padding: 10px;
+            width: 80vw;
+            height: 45vw;
+        }
     }
 
     .contenedorLogros {
