--- a/Styles/style.css
+++ b/Styles/style.css
@@ -475,11 +475,18 @@ footer #footerRedes .footerBotonRedes .footerBotonRedesImg {
   font-weight: bolder;
   color: #eeeeee;
 }
-#acercaMain .videoYT {
-  margin-top: 2rem;
+#acercaMain .contenedorVideo {
   margin-left: auto;
   margin-right: auto;
-  padding: 1rem;
+  text-align: center;
+}
+#acercaMain .contenedorVideo .videoYT {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2rem;
+  padding: 10px;
+  width: 80vw;
+  height: 45vw;
 }
 #acercaMain .contenedorLogros {
   background-color: #545454;
