--- a/Styles/style.css
+++ b/Styles/style.css
@@ -541,8 +541,12 @@ footer #footerRedes .footerBotonRedes .footerBotonRedesImg {
     font-size: 24px;
   }
   #acercaMain #textoAcercaDe .acercaJavier .acercaImagenTexto {
+    margin-left: 5rem;
+    margin-right: 5rem;
+    padding-right: 5rem;
+    padding-left: 5rem;
     height: auto;
-    width: 100%;
+    width: 90%;
   }
   #acercaMain .contenedorLogros .subtituloTipoUno {
     font-size: 3rem;
