actualizacion de set-24

--- a/Styles/Partials/_gallery.scss
+++ b/Styles/Partials/_gallery.scss
@@ -70,6 +70,11 @@
         background-image: url("../Multimedia/Gallery/Galería2/main.jpg");
     }
 
+    .sectorClasesGaleriaTres {
+        background-image: url("../Multimedia/Gallery/Galería6/main.jpg");
+        margin-top: 8rem;
+    }
+
     .sectorCompeticionGaleriaUno {
         background-image: url("../Multimedia/Gallery/Galería3/2.jpg");
     }
