actualizacion de set-24

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -714,7 +714,7 @@ footer #footerRedes .footerBotonRedes .footerBotonRedesImg {
 }
 #galleryClasesMain .sectorClasesGaleriaTres,
 #galleryCompeticionMain .sectorClasesGaleriaTres {
-  background-image: url("../Multimedia/Gallery/Galería6/main.jpg");
+  background-image: url("../Multimedia/Gallery/Galería6/64.jpg");
 }
 #galleryClasesMain .sectorCompeticionGaleriaUno,
 #galleryCompeticionMain .sectorCompeticionGaleriaUno {
