actualizacion de set-24

--- a/Styles/Partials/_gallery.scss
+++ b/Styles/Partials/_gallery.scss
@@ -70,7 +70,7 @@
         background-image: url("../Multimedia/Gallery/Galería2/main.jpg");
     }
 
-    .sectorClasesGaleriaTres {
+    .sectorClasesGaleriaTrs {
         background-image: url("../Multimedia/Gallery/Galería6/64.jpg");
     }
 
