--- a/Styles/style.css
+++ b/Styles/style.css
@@ -712,8 +712,8 @@ footer #footerRedes .footerBotonRedes .footerBotonRedesImg {
 #galleryCompeticionMain .sectorClasesGaleriaDos {
   background-image: url("../Multimedia/Gallery/Galería2/main.jpg");
 }
-#galleryClasesMain .sectorClasesGaleriaTres,
-#galleryCompeticionMain .sectorClasesGaleriaTres {
+#galleryClasesMain .sectorClasesGaleriaTrs,
+#galleryCompeticionMain .sectorClasesGaleriaTrs {
   background-image: url("../Multimedia/Gallery/Galería6/64.jpg");
 }
 #galleryClasesMain .sectorCompeticionGaleriaUno,
